--- a/iOSDevelopmentForCreativeEntrepreneurs/Networking and Security in iOS Applications/W2/InstagramPlus/InstagramPlus/Info.plist
+++ b/iOSDevelopmentForCreativeEntrepreneurs/Networking and Security in iOS Applications/W2/InstagramPlus/InstagramPlus/Info.plist
@@ -2,6 +2,28 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>api.instagram.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+			</dict>
+			<key>cdninstagram.com</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<string>NO</string>
+			</dict>
+			<key></key>
+			<string></string>
+		</dict>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -33,7 +55,7 @@
 			<string>Garrdy.InstagramPlus</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>dict</string>
+				<string>myscheme</string>
 			</array>
 		</dict>
 	</array>
